--- a/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/PartyInfoViewController/GameInfoVIewContoller/GameInfoCell/GameInfoTableViewCell.xib
+++ b/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/PartyInfoViewController/GameInfoVIewContoller/GameInfoCell/GameInfoTableViewCell.xib
@@ -9,14 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="PlayersViewCell" customModule="LFP_project" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="GameInfoTableViewCell" customModule="LFP_project" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udF-uV-pm0">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUh-6H-ITf">
                         <rect key="frame" x="20" y="20" width="280" height="50"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -24,17 +24,17 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="udF-uV-pm0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="2AY-Pa-dXZ"/>
-                    <constraint firstItem="udF-uV-pm0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Dli-pP-CLa"/>
-                    <constraint firstAttribute="bottom" secondItem="udF-uV-pm0" secondAttribute="bottom" constant="20" id="DwZ-E3-fbt"/>
-                    <constraint firstAttribute="trailing" secondItem="udF-uV-pm0" secondAttribute="trailing" constant="20" id="MIS-FN-QNy"/>
+                    <constraint firstItem="aUh-6H-ITf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="8uN-iI-izg"/>
+                    <constraint firstAttribute="trailing" secondItem="aUh-6H-ITf" secondAttribute="trailing" constant="20" id="N49-rk-ey0"/>
+                    <constraint firstAttribute="bottom" secondItem="aUh-6H-ITf" secondAttribute="bottom" constant="20" id="d7D-cN-woT"/>
+                    <constraint firstItem="aUh-6H-ITf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="sdl-SB-Vu0"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="playerLabel" destination="udF-uV-pm0" id="uQg-FT-AsH"/>
+                <outlet property="infoLabel" destination="aUh-6H-ITf" id="up8-ny-6hF"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="90.736607142857139"/>
+            <point key="canvasLocation" x="139" y="95"/>
         </tableViewCell>
     </objects>
 </document>
