--- a/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
+++ b/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
@@ -47,6 +47,16 @@
                             <constraint firstAttribute="width" constant="20" id="x9z-vd-qQa"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fqx-Lo-if1">
+                        <rect key="frame" x="274" y="98.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="0WW-R3-Enn"/>
+                            <constraint firstAttribute="height" constant="30" id="6RN-fy-Vby"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" image="applepencil" catalog="system"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="mir-D3-qP0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="2fk-eg-Zcq"/>
@@ -58,13 +68,16 @@
                     <constraint firstItem="Q3u-vS-Ivl" firstAttribute="top" secondItem="mir-D3-qP0" secondAttribute="bottom" constant="10" id="Ztc-g6-UHH"/>
                     <constraint firstItem="mir-D3-qP0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="cQs-me-l5h"/>
                     <constraint firstItem="Q3u-vS-Ivl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="eZ7-aa-3vK"/>
+                    <constraint firstAttribute="trailing" secondItem="Fqx-Lo-if1" secondAttribute="trailing" constant="16" id="jkn-Kp-p1h"/>
                     <constraint firstItem="6Gf-Sp-ITv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="nQL-qK-32t"/>
+                    <constraint firstItem="Fqx-Lo-if1" firstAttribute="centerY" secondItem="11l-YV-ly7" secondAttribute="centerY" id="qu1-e5-Wih"/>
                     <constraint firstItem="6Gf-Sp-ITv" firstAttribute="top" secondItem="Q3u-vS-Ivl" secondAttribute="bottom" constant="10" id="xO7-uF-qO1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="dateLabel" destination="Q3u-vS-Ivl" id="S2r-IW-aEZ"/>
+                <outlet property="editButton" destination="Fqx-Lo-if1" id="Ytr-ge-IlT"/>
                 <outlet property="locationLabel" destination="mir-D3-qP0" id="Wxl-wJ-Zr9"/>
                 <outlet property="nextPageImage" destination="rd9-bu-gd7" id="WV7-Ut-FTT"/>
                 <outlet property="playersLabel" destination="11l-YV-ly7" id="67C-0G-kCZ"/>
@@ -73,4 +86,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="95.424107142857139"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="applepencil" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
