--- a/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
+++ b/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
@@ -9,69 +9,121 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="AllPartiesViewCell" customModule="LFP_project" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="200" id="KGk-i7-Jjw" customClass="AllPartiesViewCell" customModule="LFP_project" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="350" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
-                <autoresizingMask key="autoresizingMask"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="200"/>
+                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mir-D3-qP0">
-                        <rect key="frame" x="16" y="10" width="66" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3u-vS-Ivl">
-                        <rect key="frame" x="16" y="41" width="36" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Gf-Sp-ITv">
-                        <rect key="frame" x="16" y="72" width="75" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11l-YV-ly7">
-                        <rect key="frame" x="16" y="103" width="55" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rd9-bu-gd7">
-                        <rect key="frame" x="284" y="10" width="20" height="20"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A9n-gK-kph">
+                        <rect key="frame" x="16" y="20" width="318" height="25"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wKS-lL-ycc">
+                                <rect key="frame" x="0.0" y="0.5" width="20" height="19"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="Cao-a5-L0b"/>
+                                    <constraint firstAttribute="height" constant="20" id="lbH-c1-ldb"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mir-D3-qP0">
+                                <rect key="frame" x="30" y="-5" width="288" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="XZ6-u7-p7r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="b0t-HH-e7S"/>
-                            <constraint firstAttribute="width" constant="20" id="x9z-vd-qQa"/>
+                            <constraint firstAttribute="height" constant="25" id="wuc-Ta-bxD"/>
                         </constraints>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fqx-Lo-if1">
-                        <rect key="frame" x="274" y="98.5" width="30" height="30"/>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="V48-KF-Geu">
+                        <rect key="frame" x="16" y="55" width="318" height="25"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Sul-Se-nQM">
+                                <rect key="frame" x="0.0" y="1" width="20" height="17.5"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="XfP-YQ-RqZ"/>
+                                    <constraint firstAttribute="height" constant="20" id="bHf-sm-slq"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3u-vS-Ivl">
+                                <rect key="frame" x="30" y="0.0" width="193" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vUD-xK-bDc">
+                                <rect key="frame" x="233" y="0.5" width="20" height="19"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="9o5-Bu-Yw9"/>
+                                    <constraint firstAttribute="height" constant="20" id="Mh6-h1-fZF"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Gf-Sp-ITv">
+                                <rect key="frame" x="263" y="0.0" width="25" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rd9-bu-gd7">
+                                <rect key="frame" x="298" y="0.0" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="b0t-HH-e7S"/>
+                                    <constraint firstAttribute="width" constant="20" id="x9z-vd-qQa"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="0WW-R3-Enn"/>
-                            <constraint firstAttribute="height" constant="30" id="6RN-fy-Vby"/>
+                            <constraint firstAttribute="height" constant="25" id="jwa-ao-fF9"/>
                         </constraints>
-                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" image="applepencil" catalog="system"/>
-                    </button>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PhC-Wa-fbE">
+                        <rect key="frame" x="16" y="90" width="318" height="20"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.3" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8AD-AO-ktu">
+                                <rect key="frame" x="0.0" y="1.5" width="20" height="17.5"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="TfA-dg-22O"/>
+                                    <constraint firstAttribute="height" constant="20" id="eYH-Tm-mJL"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11l-YV-ly7">
+                                <rect key="frame" x="30" y="0.0" width="258" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fqx-Lo-if1">
+                                <rect key="frame" x="298" y="0.0" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="0WW-R3-Enn"/>
+                                    <constraint firstAttribute="height" constant="20" id="6RN-fy-Vby"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="applepencil" catalog="system"/>
+                            </button>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mir-D3-qP0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="2fk-eg-Zcq"/>
-                    <constraint firstAttribute="trailing" secondItem="rd9-bu-gd7" secondAttribute="trailing" constant="16" id="AWR-Zc-hOE"/>
-                    <constraint firstItem="rd9-bu-gd7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="FVM-va-Iw0"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="11l-YV-ly7" secondAttribute="bottom" constant="10" id="KGa-ye-9dB"/>
-                    <constraint firstItem="11l-YV-ly7" firstAttribute="top" secondItem="6Gf-Sp-ITv" secondAttribute="bottom" constant="10" id="Tha-by-gSP"/>
-                    <constraint firstItem="11l-YV-ly7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Zsk-6K-5pp"/>
-                    <constraint firstItem="Q3u-vS-Ivl" firstAttribute="top" secondItem="mir-D3-qP0" secondAttribute="bottom" constant="10" id="Ztc-g6-UHH"/>
-                    <constraint firstItem="mir-D3-qP0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="cQs-me-l5h"/>
-                    <constraint firstItem="Q3u-vS-Ivl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="eZ7-aa-3vK"/>
-                    <constraint firstAttribute="trailing" secondItem="Fqx-Lo-if1" secondAttribute="trailing" constant="16" id="jkn-Kp-p1h"/>
-                    <constraint firstItem="6Gf-Sp-ITv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="nQL-qK-32t"/>
-                    <constraint firstItem="Fqx-Lo-if1" firstAttribute="centerY" secondItem="11l-YV-ly7" secondAttribute="centerY" id="qu1-e5-Wih"/>
-                    <constraint firstItem="6Gf-Sp-ITv" firstAttribute="top" secondItem="Q3u-vS-Ivl" secondAttribute="bottom" constant="10" id="xO7-uF-qO1"/>
+                    <constraint firstItem="PhC-Wa-fbE" firstAttribute="top" secondItem="V48-KF-Geu" secondAttribute="bottom" constant="10" id="Ds5-UF-jtz"/>
+                    <constraint firstItem="PhC-Wa-fbE" firstAttribute="trailing" secondItem="V48-KF-Geu" secondAttribute="trailing" id="FHE-4I-igu"/>
+                    <constraint firstItem="PhC-Wa-fbE" firstAttribute="leading" secondItem="V48-KF-Geu" secondAttribute="leading" id="IJB-gC-VOm"/>
+                    <constraint firstItem="A9n-gK-kph" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="L6j-zd-Dkf"/>
+                    <constraint firstItem="A9n-gK-kph" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="czz-Xd-lHR"/>
+                    <constraint firstItem="V48-KF-Geu" firstAttribute="leading" secondItem="A9n-gK-kph" secondAttribute="leading" id="l6M-QX-A7T"/>
+                    <constraint firstItem="V48-KF-Geu" firstAttribute="trailing" secondItem="A9n-gK-kph" secondAttribute="trailing" id="tM2-sh-9Nu"/>
+                    <constraint firstAttribute="trailing" secondItem="A9n-gK-kph" secondAttribute="trailing" constant="16" id="xfm-As-w1h"/>
+                    <constraint firstItem="V48-KF-Geu" firstAttribute="top" secondItem="A9n-gK-kph" secondAttribute="bottom" constant="10" id="xqf-1x-n7g"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -83,10 +135,14 @@
                 <outlet property="playersLabel" destination="11l-YV-ly7" id="67C-0G-kCZ"/>
                 <outlet property="startTimeLabel" destination="6Gf-Sp-ITv" id="Cep-eT-tOm"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="95.424107142857139"/>
+            <point key="canvasLocation" x="115.94202898550725" y="103.79464285714285"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="applepencil" catalog="system" width="128" height="113"/>
+        <image name="calendar" catalog="system" width="128" height="106"/>
+        <image name="clock" catalog="system" width="128" height="121"/>
+        <image name="mappin.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="person.3" catalog="system" width="128" height="62"/>
     </resources>
 </document>
