--- a/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
+++ b/LFP-project/TabBarControllers/AllPartiesViewContoller+PartyInfoViewController/AllPartiesViewCell/AllPartiesViewCell.xib
@@ -20,15 +20,14 @@
                         <rect key="frame" x="16" y="20" width="318" height="25"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wKS-lL-ycc">
-                                <rect key="frame" x="0.0" y="0.5" width="20" height="19"/>
+                                <rect key="frame" x="0.0" y="0.5" width="20" height="24"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="Cao-a5-L0b"/>
-                                    <constraint firstAttribute="height" constant="20" id="lbH-c1-ldb"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mir-D3-qP0">
-                                <rect key="frame" x="30" y="-5" width="288" height="25"/>
+                                <rect key="frame" x="30" y="0.0" width="288" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="XZ6-u7-p7r"/>
                                 </constraints>
@@ -45,63 +44,66 @@
                         <rect key="frame" x="16" y="55" width="318" height="25"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Sul-Se-nQM">
-                                <rect key="frame" x="0.0" y="1" width="20" height="17.5"/>
+                                <rect key="frame" x="0.0" y="1" width="20" height="22.5"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="XfP-YQ-RqZ"/>
-                                    <constraint firstAttribute="height" constant="20" id="bHf-sm-slq"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3u-vS-Ivl">
-                                <rect key="frame" x="30" y="0.0" width="193" height="20"/>
+                                <rect key="frame" x="30" y="0.0" width="193" height="25"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vUD-xK-bDc">
-                                <rect key="frame" x="233" y="0.5" width="20" height="19"/>
+                                <rect key="frame" x="233" y="0.5" width="20" height="24"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="9o5-Bu-Yw9"/>
-                                    <constraint firstAttribute="height" constant="20" id="Mh6-h1-fZF"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Gf-Sp-ITv">
-                                <rect key="frame" x="263" y="0.0" width="25" height="20"/>
+                                <rect key="frame" x="263" y="0.0" width="25" height="25"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rd9-bu-gd7">
-                                <rect key="frame" x="298" y="0.0" width="20" height="20"/>
+                                <rect key="frame" x="298" y="0.0" width="20" height="25"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="b0t-HH-e7S"/>
                                     <constraint firstAttribute="width" constant="20" id="x9z-vd-qQa"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="jwa-ao-fF9"/>
+                            <constraint firstAttribute="height" constant="25" id="UTo-4v-NK2"/>
                         </constraints>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PhC-Wa-fbE">
-                        <rect key="frame" x="16" y="90" width="318" height="20"/>
+                        <rect key="frame" x="16" y="90" width="318" height="25"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.3" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8AD-AO-ktu">
-                                <rect key="frame" x="0.0" y="1.5" width="20" height="17.5"/>
+                                <rect key="frame" x="0.0" y="1.5" width="20" height="22.5"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="TfA-dg-22O"/>
-                                    <constraint firstAttribute="height" constant="20" id="eYH-Tm-mJL"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11l-YV-ly7">
-                                <rect key="frame" x="30" y="0.0" width="288" height="20"/>
+                                <rect key="frame" x="30" y="0.0" width="128" height="25"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="crown.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pea-Qd-slH">
+                                <rect key="frame" x="168" y="0.0" width="150" height="23.5"/>
+                                <color key="tintColor" red="0.89313798099999997" green="0.59069695550000001" blue="0.0071575577179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="9m9-kK-0Gl"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -121,6 +123,7 @@
                 <outlet property="dateLabel" destination="Q3u-vS-Ivl" id="S2r-IW-aEZ"/>
                 <outlet property="locationLabel" destination="mir-D3-qP0" id="Wxl-wJ-Zr9"/>
                 <outlet property="nextPageImage" destination="rd9-bu-gd7" id="WV7-Ut-FTT"/>
+                <outlet property="partyMakerImage" destination="pea-Qd-slH" id="0Sm-7Y-T2p"/>
                 <outlet property="playersLabel" destination="11l-YV-ly7" id="67C-0G-kCZ"/>
                 <outlet property="startTimeLabel" destination="6Gf-Sp-ITv" id="Cep-eT-tOm"/>
             </connections>
@@ -130,6 +133,7 @@
     <resources>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="clock" catalog="system" width="128" height="121"/>
+        <image name="crown.fill" catalog="system" width="128" height="92"/>
         <image name="mappin.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.3" catalog="system" width="128" height="62"/>
     </resources>
